[F] Actions: add missing runs-on: ubuntu-latest.

--- a/.github/workflows/rust-codecov.yml
+++ b/.github/workflows/rust-codecov.yml
@@ -3,6 +3,7 @@ on: [ push ]
 
 jobs:
   Rust-Codecov:
+    runs-on: ubuntu-latest
     steps:
       - name: Rust Codecov
         uses: maboesanman/rust-codecov@v0
