[+] Actions: Add missing uses: actions/checkout@v2.

--- a/.github/workflows/rust-codecov.yml
+++ b/.github/workflows/rust-codecov.yml
@@ -5,6 +5,7 @@ jobs:
   Rust-Codecov:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Rust Codecov
         uses: maboesanman/rust-codecov@v0
       - run: "cat codecov.json"
