--- a/.github/workflows/rust-codecov.yml
+++ b/.github/workflows/rust-codecov.yml
@@ -7,4 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: cachix/install-nix-action@v15
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+
       - run: nix-shell nix-shell/codecov.nix
