--- a/.github/workflows/rust-codecov.yml
+++ b/.github/workflows/rust-codecov.yml
@@ -11,3 +11,4 @@ jobs:
           nix_path: nixpkgs=channel:nixos-unstable
 
       - run: nix-shell nix-shell/codecov.nix
+      - uses: codecov/codecov-action@v2
