[+] Actions: use actions/upload-artifact@v2.

--- a/.github/workflows/artifact-on-push.yml
+++ b/.github/workflows/artifact-on-push.yml
@@ -16,4 +16,6 @@ jobs:
           command: build
           args: --release
 
-      - run: find .
+      - uses: actions/upload-artifact@v2
+        with:
+          path: target/release/sg_cli
