--- a/.github/workflows/artifact-on-push.yml
+++ b/.github/workflows/artifact-on-push.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
 
-      - run: nix-shell nix-shell/cargo-build.nix --pure
+      - run: nix-shell nix-scripts/cargo-build.nix --pure
 
       - uses: actions/upload-artifact@v2
         with:
