--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ toml = "0.5.8"
 serde = { version = "1.0", features = ["derive"] }
 
 atty = "0.2.14"
+
+clap = { version = "3.0.6", features = ["derive"] }
