--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "sg_cli"
 version = "0.1.0"
 edition = "2021"
 
+description = "Steam Guard code, but locally and offline."
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
